# RPA-ETL

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  pytest.ini  requirements.txt  result.xml  rpa_config.py  test_debug.txt  test_log.txt
.github/workflows/: tests.yml
api/: dependencies.py  main.py  schemas.py
infra/: docker-compose.yml
infra/nginx/: nginx.conf
infra/nginx/conf.d/: rpa.conf
robot/: orchestrator.py  pdf_reader.py
robot/core/: parser.py  pdf_reader.py  text_normalizer.py  validators.py
robot/schema/: models.py  orchestrator_models.py
rpa_etl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: debug_document_flow.py
tests/: input_extract_data.py  test_api_milestone1.py  test_parser.py
tests/contract/: internal_core_contract.md  test_payload_schema.py  test_payload_transform.py
tests/e2e/: test_orchestrator.py  test_orchestrator_validation.py  test_pipeline_core.py  test_pipeline_robustez.py
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_normalizer.py  test_parser.py  test_parser_blocks.py  test_validators.py
