[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rpa-etl"
version = "0.2.1"      
description = "RPA Engine for fiscal document extraction and orchestration"   
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Thiago Rocha", email = "thdarochabp@gmail.com" }
]

dependencies = [
  "pytest",
  "pymupdf",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["robot"]