[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rpa-etl"
version = "0.2.1"
description = "RPA Engine for fiscal document extraction and orchestration"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Thiago Rocha", email = "thdarochabp@gmail.com" }
]

dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.6",
  "PyMuPDF>=1.24.0",
  "python-dateutil>=2.9",
]

[project.optional-dependencies]

api = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.12",
  "httpx>=0.27"
]

worker = [
  "celery>=5.4",
  "redis>=5.2"
]

observability = [
  "ddtrace>=2.14",
  "datadog>=0.50"
]

dev = [
  "pytest>=8.0",
  "pytest-cov",
  "pytest-benchmark",
  "ruff",
  "mypy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["robot*", "api*"]